--- a/docs/de-de/modules/maerkte/pages/spielwiese.adoc
+++ b/docs/de-de/modules/maerkte/pages/spielwiese.adoc
@@ -81,3 +81,133 @@ latexmath:[\mbox{MeldΔ} = {(\mbox{dynamischer Meldebestand} - (\mbox{Nettobesta
 latexmath:[\mbox{MeldΔ} = {(\mbox{dynamischer Meldebestand} - (\mbox{Nettobestand} + (\mbox{nachbestellte Menge})}]
 
 ---
+
+
+[#order-workflow]
+== Bestellungen über Galaxus
+
+Du hast deinen Firmensitz in Deutschland und lieferst an Galaxus-Endkund:innen in die Schweiz.
+Daraus ergeben sich drei mögliche Szenarien:
+
+. Du sendest die Ware direkt an die Adresse der Endkund:in in der Schweiz.
+. Du nutzt den EU-Hub von Galaxus und hast _keine_ Fiskalvertretung in der Schweiz.
+. Du nutzt den EU-Hub von Galaxus und hast eine Fiskalvertretung in der Schweiz.
+
+[.collapseBox]
+.Was ist der EU-Hub?
+--
+Der EU-Hub ist eine Cross-Border-Verzollungslösung von Galaxus für unkomplizierten Zugang zum schweizerischen Markt.
+Als EU-Händler:in kannst du den EU-Hub unabhängig davon nutzen, ob du eine Fiskalvertretung in der Schweiz hast oder nicht.
+Die Digitec Galaxus AG tritt dabei als Serviceprovider für die Logistik und die Deklaration, Verzollung und Mehrwertsteuerabführung auf.
+
+https://partner.digitecgalaxus.ch/hc/de/articles/360016297139-Wie-kann-ich-die-Verzollungs-L%C3%B6sung-der-Digitec-Galaxus-AG-nutzen-[Weitere Informationen und Voraussetzungen für die Nutzung des EU-Hubs findest du bei Galaxus].
+--
+
+[.collapseBox]
+.Was bedeutet Fiskalvertretung?
+--
+Ausländische Versandhändler:innen sind in der Schweiz mehrwertsteuerpflichtig, wenn sie mit Kleinsendungen an Kund:innen in der Schweiz einen Jahresumsatz von mindestens 100.000,00 CHF erzielen.
+Kleinsendungen sind definiert als Sendungen mit einem Warenwert von bis zu 65 CHF.
+
+Diese Händler:innen müssen eine Person mit Wohnsitz in der Schweiz als Mehrwertsteuer-Fiskalvertretung bestimmen. Die Fiskalvertretung registriert die Händler:innen im Schweizer Mehrwertsteuerregister.
+--
+
+[.collapseBox]
+.Wie laufen Bestellungen über den EU-Hub ab?
+--
+
+Wenn du den EU-Hub nutzt, läuft eine Bestellung so ab:
+
+. Kund:in in der Schweiz bestellen und zahlt ein Produkt über Galaxus.
+. Du bestätigst Galaxus, dass die Bestellung eingegangen ist.
+. Du sendest das Paket an den EU-Hub.
+. Du informierst Galaxus darüber, dass das Paket unterwegs ist.
+. Das Paket wird im EU-Hub logistisch und zollrechtlich verarbeitet:
+  * Paket wird mit Versandetiketten für die Schweizer Post versehen.
+  * Die rechtlich notwendigen Ausfuhrschritte werden erledigt.
+. Das Paket wird in das Schweizer Zentrallager transportiert.
+. Das Zentrallager erledigt die für die Einfuhr nötigen Schritte.
+. Das Paket wird an die Schweizer Post übergeben.
+. Kund:in nimmt das Paket in Empfang.
+
+https://partner.digitecgalaxus.ch/hc/de/articles/360016297139-Wie-kann-ich-die-Verzollungs-L%C3%B6sung-der-Digitec-Galaxus-AG-nutzen-[Weitere Informationen und Vorraussetzungen für die Nutzung des EU-Hubs findest du bei Galaxus].
+--
+
+[.collapseBox]
+.Wie laufen Retouren über den EU-Hub ab?
+--
+
+Wenn du den EU-Hub nutzt, läuft eine Retoure so ab:
+
+. Kund:in gibt im Galaxus-Shop an, dass sie eine Retoure wünscht.
+. Du wirst von Galaxus über die Retoure informiert.
+. Kund:in sendet die Retoure an Digitec Galaxus AG in der Schweiz.
+. Das Paket wird im Schweizer Zentrallager logistisch und zollrechtlich verarbeitet:
+  * Paket wird mit Versandetiketten für die UHL versehen.
+  * Die rechtlich notwendigen Ausfuhrschritte werden erledigt.
+. Das Paket wird in das EU-Hub transportiert.
+. Das EU-Hub erledigt die für die Einfuhr nötigen Schritte.
+. Das Paket wird an DHL übergeben.
+. Du nimmst die Retoure entgegen.
+. Du informierst Galaxus darüber, dass die Retoure angenommen wurde.
+
+https://partner.digitecgalaxus.ch/hc/de/articles/360016297139-Wie-kann-ich-die-Verzollungs-L%C3%B6sung-der-Digitec-Galaxus-AG-nutzen-[Weitere Informationen und Vorraussetzungen für die Nutzung des EU-Hubs findest du bei Galaxus].
+--
+
+[#difference-fiscal-representation]
+=== Unterschied: EU-Hub ohne und mit Fiskalvertretung
+
+[[eu-hub-fiscal-representation]]
+.EU-Hub ohne und mit Fiskalvertretung
+[cols="1a,1a"]
+|===
+|Direkte Lieferung _oder_ EU-Hub ohne Fiskalvertretung |EU-Hub mit Fiskalvertretung
+
+|
+* Du bezahlst _keine_ Schweizer Mehrwertsteuer auf Aufträge über den EU-Hub.
+* Du verwendest die Zahlungsmethode *Galaxus Direct Checkout*.
+
+* In plentymarkets wird eine Nettorechnung mit der Währung Schweizer Franken generiert. Die Rechnungsadresse ist die Adresse der Kund:in.
+
+|
+* Du aktivierst die Option *Ich nutze den Galaxus EU-Hub und habe eine Fiskalvertretung in der Schweiz* im Menü *Einrichtung » Märkte » Galaxus » Auftragsimport*.
+* Im Standort *Schweiz* ist deine Umsatzsteuer-ID für die Schweiz gespeichert.
+* Du verwendest die Zahlungsmethode *Galaxus Direct Checkout Fisc Rep*.
+* Du bezahlst Schweizer Mehrwertsteuer auf Aufträge über den EU-Hub.
+
+Beim Import des Auftrags passiert folgendes:
+
+* Der Hauptauftrag wird erstellt. In diesem Hauptauftrag ist die Schweizer Adresse der Endkund:in angegeben.
+* Ein Lieferauftrag wird erstellt. Lieferadresse dieses Lieferauftrags ist der EU-Hub. Die Adresse des EU-Hubs wird automatisch eingefügt. Auch auf den Versandetiketten wird die Adresse des EU-Hubs eingefüllt.
+* In plentymarkets wird eine Bruttorechnung mit der Währung Schweizer Franken generiert. Die Rechnungsadresse ist die Adresse der Kund:in.
+
+|===
+
+== Besonderheiten der Galaxus-Auftragsabwicklung
+
+* Aufträge mit Rechnungsadresse in der Schweiz und Lieferadresse in der EU werden als Netto-Aufträge importiert. +
+*_Ausnahme:_* Du hast eine Fiskalvertretung in der Schweiz.
+
+* In allen Szenarien, in denen nur ein Teil der Bestellung weiterbearbeitet werden soll, muss die importierte Bestellung aufgeteilt werden. Die resultierenden Aufträge müssen separat bearbeitet werden.
+
+* Status zur Ablehnung von Teilstorno-Anfragen und Storno-anfragen muss vom Benutzer gesetzt werden, unter *Einrichtung » Märkte » Galaxus » Auftragsimport » Auftrag Status-Konfiguration*. Ohne Benutzer-Auswahl, wird der Status *[5] Freigabe Versand eingesetzt* Standardmäsig eingesetzt.
+
+* Das Plugin kann nach dem Aufteilen eines Auftrags, ohne zusätzliche Benutzereingaben, zum korrekten Galaxus Auftrag zurückmelden.
+
+* Galaxus Retoure-Anfragen generieren neue plentymarkets Aufträge vom Typ *Retoure* * diese werden zum Initial-Auftrag verknüpft. Die resultierenden Aufträge sind separat zu bearbeiten.
+
+* Das Standard Lieferdatum für Galaxus Aufträge ist: Tag an dem die Ereignisaktion *Auftragsbestätigung an Galaxus senden* ausgelöst wurde *+ 2 Arbeitstage*,es sei denn, ein anderes Lieferdatum ist unter *Auftrag » Übersicht » Artikel » Bearbeiten » Lieferdatum* im Voraus eingetragen worden. Ein Versanddatum wird auch nicht gesetzt, wenn die zur  Auftragserfüllung benötigte Warenmenge, nicht als Warenbestand-Netto  vorhanden ist. Das geplante Lieferdatum kann anahnd der Plugin-Option  *Positive Bestände sollen immer exportiert werden...* unter *Einrichtung » Märkte » Galaxus » Product Stock Price Tab*  weiteren Änderungen unterliegen.
+
+* Nehme, neben deinen standardmäsigen Lieferschein-Einstellungen, noch folgende Einstellungen für Galaxus Lieferscheine vor:
+
+. Öffne das Menü *Einrichtung » Mandant » Standorte » Standort wählen » Dokumente » Lieferschein*.
+. Wähle im Abschnitt *Optionale Elemente unter Artikelposition* für die Option *Externe Auftragsnummer* die Einstellung *Ja*.
+. Gebe im Eingabefeld *Hinweis* folgenden von Galaxus vorgegebenen Hinwei
+
+=== Auftrag teilen, ein Beispiel
+
+. Öffne das Menü *Auftrag » Auftrags-ID*.
+. Teile den Auftrag unter *Auftrag » Übersicht » Zahnrad » (Teilen)*. +
+→ Das Fenster *Auftrag teilen* wird geöffnet.
+. Wähle die Artikelmengen für den neuen Auftrag. +
+*_Wichtig:_* Die Versandkosten des ursprünglichen Auftrags werden nicht geändert.
