--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -935,6 +935,8 @@ Die verfügbaren Variablen für den EmailBuilder sind in die folgenden Kategorie
 
 * <<#variablen-newsletter, Newsletter>>
 
+* <<#variablen-ticket, Ticket>>
+
 [#variablen-auftrag]
 ==== Variablen: Auftrag allgemein
 
@@ -2029,6 +2031,58 @@ Alternativ findest du die gespeicherte IBAN im Menü *Einrichtung » Einstellung
 | `URL zur Bestätigung des Newsletter-Abonnements`
 |Gibt die URL zum Bestätigen des xref:crm:newsletter-versenden.adoc#[Newsletter-Abonnements] aus.
 | `newsletter.formattedConfirmUrl`
+
+|====
+
+[#variablen-ticket]
+==== Variablen: Ticket
+
+[[table-variables-ticket]]
+.Variablen in der Kategorie *Ticket*
+[cols="2,5,2"]
+|====
+|Name der Variable |Erläuterung |Twig expression
+
+| `Ticket Backend-URL`
+|Verlinkt zum Ticket im Menü xref:crm:ticketsystem-nutzen.adoc#[CRM » Ticketsystem].
+| 
+
+| `Ticket: Nachrichtenhistorie`
+|Gibt den zuletzt gespeicherten Text im Ticket aus. Das ist entweder der Text eines Kommentars oder einer Nachricht.
+| 
+
+| `Ticket-ID`
+|Gibt die ID des Tickets aus, aus dem die E-Mail versendet wurde.
+| 
+
+| `Ticket: Letzter Kommentar`
+|Gibt den Text des letzten xref:crm:ticketsystem-nutzen.adoc#2500[Kommentars] aus.
+| 
+
+| `Ticket: Letzte Nachricht`
+|Gibt den Text der letzten xref:crm:ticketsystem-nutzen.adoc#2400[Nachricht] aus.
+| 
+
+| `Ticket-Priorität`
+|Gibt die Priorität des Tickets aus. Die Werte der Sterne werden aufsteigend mit Zahlen von `0` (grauer Stern, niedrigste Priorität) bis `5` (2 gelbe Sterne, höchste Priorität) angezeigt.
+| 
+
+| `Ticket-Status`
+|Gibt den Status des Tickets aus.
+| 
+
+| `Ticket-Tags`
+|Gibt die Tags des Tickets aus.
+| 
+
+| `Ticket-Titel`
+|Gibt den Titel des Tickets aus.
+| 
+
+| `Ticket-URL`
+|Verlinkt zum Ticket im Bereich *Mein Konto* des Kunden. Kund:innen können dann dort die Nachricht lesen und direkt eine Antwortnachricht eingeben und versenden. +
+Beachte dazu das Kapitel xref:crm:ticketsystem-nutzen.adoc#5500[Tickets im Mein Konto-Bereich erstellen] auf der Handbuchseite xref:crm-ticketsystem-nutzen.adoc#[Ticketsystem].
+| 
 
 |====
 
