Add twig expressions

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -2045,44 +2045,44 @@ Alternativ findest du die gespeicherte IBAN im Menü *Einrichtung » Einstellung
 
 | `Ticket Backend-URL`
 |Verlinkt zum Ticket im Menü xref:crm:ticketsystem-nutzen.adoc#[CRM » Ticketsystem].
-| 
+| `ticket.formattedUrl.backendUrl`
 
 | `Ticket: Nachrichtenhistorie`
 |Gibt den zuletzt gespeicherten Text im Ticket aus. Das ist entweder der Text eines Kommentars oder einer Nachricht.
-| 
+| `ticket.formattedMessage.history | raw`
 
 | `Ticket-ID`
 |Gibt die ID des Tickets aus, aus dem die E-Mail versendet wurde.
-| 
+| `ticket.id`
 
 | `Ticket: Letzter Kommentar`
 |Gibt den Text des letzten xref:crm:ticketsystem-nutzen.adoc#2500[Kommentars] aus.
-| 
+| `ticket.formattedMessage.lastComment | raw`
 
 | `Ticket: Letzte Nachricht`
 |Gibt den Text der letzten xref:crm:ticketsystem-nutzen.adoc#2400[Nachricht] aus.
-| 
+| `ticket.formattedMessage.lastMessage | raw`
 
 | `Ticket-Priorität`
-|Gibt die Priorität des Tickets aus. Die Werte der Sterne werden aufsteigend mit Zahlen von `0` (grauer Stern, niedrigste Priorität) bis `5` (2 gelbe Sterne, höchste Priorität) angezeigt.
-| 
+|Gibt die Priorität des Tickets als ID aus. Die Werte der Sterne werden aufsteigend mit Zahlen von `0` (grauer Stern, niedrigste Priorität) bis `5` (2 gelbe Sterne, höchste Priorität) angezeigt.
+| `ticket.priorityId`
 
 | `Ticket-Status`
 |Gibt den Status des Tickets aus.
-| 
+| `ticket.formattedStatus`
 
 | `Ticket-Tags`
 |Gibt die Tags des Tickets aus.
-| 
+| `ticket.formattedTags`
 
 | `Ticket-Titel`
 |Gibt den Titel des Tickets aus.
-| 
+| `ticket.title`
 
 | `Ticket-URL`
 |Verlinkt zum Ticket im Bereich *Mein Konto* des Kunden. Kund:innen können dann dort die Nachricht lesen und direkt eine Antwortnachricht eingeben und versenden. +
 Beachte dazu das Kapitel xref:crm:ticketsystem-nutzen.adoc#5500[Tickets im Mein Konto-Bereich erstellen] auf der Handbuchseite xref:crm-ticketsystem-nutzen.adoc#[Ticketsystem].
-| 
+| `ticket.formattedUrl.url`
 
 |====
 
