--- a/docs/de-de/modules/artikel/pages/group-functions.adoc
+++ b/docs/de-de/modules/artikel/pages/group-functions.adoc
@@ -5,7 +5,7 @@
 :author: team-item
 
 ////
-zuletzt bearbeitet 15.07.2022
+zuletzt bearbeitet 18.07.2022
 ////
 
 //ToDo - GIF for the variation group function
@@ -73,11 +73,11 @@ Wähle (icon:check-square[role="blue"]) die entsprechenden Aktionen aus der Drop
 
 image::artikel:gruppenfunktion-artikel.gif[]
 
-[cols="1,3"]
+[cols="1,3a"]
 |===
 | Aktion | Erläuterung
 
-2+| *Artikelbilder*
+2+^| *Artikelbilder*
 
 | *Artikelbilder löschen*
 |Wähle diese Option (icon:check-square[role="blue"]), um alle Artikelbilder der gewählten Artikel zu löschen.
@@ -85,7 +85,7 @@ image::artikel:gruppenfunktion-artikel.gif[]
 | *Zweites Artikelbild löschen*
 |Wähle diese Option (icon:check-square[role="blue"]), um das zweite Artikelbild der gewählten Artikel zu löschen.
 
-2+| *Artikeleinstellungen*
+2+^| *Artikeleinstellungen*
 
 | *Erlöskonto*
 |Gib bis zu 11 Ziffern für das xref:auftraege:buchhaltung.adoc#800[Erlöskonto] ein.
@@ -117,7 +117,7 @@ Falls ja, dann gib hier an, ob du die Artikel als Sonderangebot, Neuheit oder To
 |Wie ist der Zustand der gewählten Artikel?
 Wähle den passenden Zustand aus der Dropdown-Liste.
 
-2+| *Marktplatzspezifische Artikeleinstellungen*
+2+^| *Marktplatzspezifische Artikeleinstellungen*
 
 | *Amazon FBA*
 |Sollen die gewählten Artikel über FBA vermarktet werden?
@@ -157,7 +157,7 @@ plentymarkets weiß, dass es Hood Listings erstellen soll, weil das Hood-Konto i
 | *Listing-Vorlage*
 |Wähle eine xref:maerkte:ebay-einrichten.adoc#5500[bereits erstellte Listing-Vorlage], um sie mit den gewählten Artikeln zu verknüpfen.
 
-2+| *Versandprofile*
+2+^| *Versandprofile*
 
 | *Aktuelle Versandprofile löschen*
 |Wähle diese Option (icon:check-square[role="blue"]), wenn du vorhandene xref:fulfillment:versand-vorbereiten.adoc#1000[Versandprofile] aus dem Artikel entfernen möchtest.
@@ -189,13 +189,13 @@ Wähle (icon:check-square[role="blue"]) die entsprechenden Aktionen aus der Drop
 . Konfiguriere die Einstellungen im unteren Teil des Fensters.
 . Führe die Gruppenfunktion aus.
 
-//#GIF#
+image::artikel:gruppenfunktion-varianten.gif[]
 
 [cols="1,3a"]
 |===
 | Aktion | Erläuterung
 
-2+| *Lager und Versand*
+2+^| *Lager und Versand*
 
 | *Hauptlager*
 |Wähle das Hauptlager der Varianten aus der Dropdown-Liste aus.
@@ -249,7 +249,7 @@ Solche Portoaufschläge bieten sich für größere oder sperrige Artikel an, der
 
 *_Hinweis_*: Das Handbuch enthält auch einige xref:fulfillment:versand-vorbereiten.adoc#1100[Rechenbeispiele für Portoaufschläge].
 
-2+| *Paketeinstellungen*
+2+^| *Paketeinstellungen*
 
 | *Paket: Bruttogewicht automatisch aus Bestandteilen berechnen*
 |Soll das Butto-Gewicht automatisch anhand der Paket-Bestandteile berechnet werden?
@@ -287,7 +287,7 @@ icon:toggle-off[role="darkGrey"] = Deaktiviert die Paketautomatik.
 *_Hinweis_*:
 Diese Einstellung ist nur für xref:artikel:multipacks-pakete-sets.adoc#2500[Artikelpakete] relevant.
 
-2+| *Tags*
+2+^| *Tags*
 
 | *Alle Tags entfernen*
 |Wähle diese Option (icon:toggle-on[role="blue"]), wenn du _alle vorhandenen_ xref:artikel:markierungen.adoc#400[Tags] aus der Variante entfernen möchtest.
@@ -312,7 +312,7 @@ Klicke in das Feld und wähle die Tags, die mit der Variante verknüpft werden s
 Nutze diese Aktion zusammen mit der Aktion *Alle Tags entfernen*, wenn die neuen Tags die vorhandenen ersetzen sollen.
 Das heißt, wenn die vorhandenen Tags zuerst aus dem Variantendatensatz entfernt werden sollen.
 
-2+| *Varianteneinstellungen*
+2+^| *Varianteneinstellungen*
 
 //old
 | *Gewicht brutto*; +
@@ -389,7 +389,7 @@ In diesem Fall macht es Sinn, die Zolltarifnummer für jede einzelne Variante zu
 * du brauchst keine Zolltarifnummern für deine Untervarianten einzugeben, wenn sie dieselbe Zolltarifnummer wie die Hauptvariante haben sollen.
 * gib eine abweichende Zolltarifnummer für alle Untervarianten ein, die sich von der Hauptvariante unterscheiden sollen.
 
-2+| *Verfügbarkeit und Sichtbarkeit*
+2+^| *Verfügbarkeit und Sichtbarkeit*
 
 | *Aktiv*
 |
@@ -488,7 +488,7 @@ icon:toggle-off[role="darkGrey"] = Deaktiviert den Mandanten für die gewählten
 . Wähle (icon:check-square[role="blue"]) alle zutreffenden Märkte aus der Dropdown-Liste aus.
 . Aktiviere (icon:toggle-on[role="blue"]) oder deaktiviere die Märkte bei Bedarf.
 
-2+| *Verkaufspreise*
+2+^| *Verkaufspreise*
 
 | *Preiskalkulation*
 |Wähle eine bereits erstellte xref:artikel:preise.adoc#1000[Preiskalkulation] aus der Dropdown-Liste aus.
@@ -629,7 +629,7 @@ Artikel kopieren:
 
 . Öffne das Menü *Artikel » Artikel-UI*.
 . xref:artikel:artikelsuche.adoc#100[Suche] und öffne den Artikel.
-. In der oberen Symbolleiste, klicke auf icon:ellipsis-v[role="darkGrey"] und dann auf terra:copy[role="yellow"] *Artikel kopieren*. +
+. In der oberen Symbolleiste, klicke auf icon:ellipsis-v[role="darkGrey"] und dann auf terra:copy[role="darkGrey"] *Artikel kopieren*. +
 → Das Fenster *Artikel kopieren* wird geöffnet.
 . Klicke auf *Bestätigen*. +
 → Der Artikel wird kopiert und in der linken Navigationsleiste geöffnet.
