Fixed broken links

--- a/docs/de-de/modules/maerkte/pages/basic-price-search-engine.adoc
+++ b/docs/de-de/modules/maerkte/pages/basic-price-search-engine.adoc
@@ -210,7 +210,7 @@ include::partial$catalogue-creation.adoc[]
 
 Nimm nun die Formateinstellungen vor. Mit diesem Marktplatz-Format kannst du Artikeldaten entweder im CSV-Format oder im TXT-Format exportieren. Die weiteren Formateinstellungen, zum Beispiel Feldtrennzeichen und Textbegrenzer, wählst du abhängig von den Anforderungen der Preissuchmaschine.
 
-* Wie du die Formateinstellungen vornimmst, erfährst du auf der Seite xref:daten:marktplatzexport.adoc#140[Kataloge verwalten].
+* Wie du die Formateinstellungen vornimmst, erfährst du auf der Seite xref:daten:marktplatz-formate-exportieren.adoc#[Marktplatz-Formate nutzen].
 
 [#data-field-mappings]
 === Datenfelder im Katalog zuordnen
