Fixed broken links (#808)
* Fixed errors on MyToys and Netto pages

* Fixed broken links

--- a/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
@@ -255,7 +255,7 @@ a| Wählen, ob <<Retouren abwickeln, eBay-Retouren>> abgerufen werden sollen. +
 * *Nein* = Der eBay-Retourenprozess ist in plentymarkets nicht aktiviert. Neue eBay-Retouren werden nicht in plentymarkets importiert. Retouren werden stattdessen bei eBay bearbeitet.
 
 | *eBay-Kaufabbrüche abrufen*
-| Wählen, ob <<Kaufabbrüche abwickeln, eBay-Kaufabbrüche>> abgerufen und in plentymarkets importiert werden. Kaufabbrüche werden alle 15 Minuten aktualisiert.
+| Wählen, ob <<Kaufabbrüche verwalten, eBay-Kaufabbrüche>> abgerufen und in plentymarkets importiert werden. Kaufabbrüche werden alle 15 Minuten aktualisiert.
 
 | *eBay-Retourenstatus aktualisieren*
 | Wählen, ob der Retourenstatus bei Statusänderung seitens eBay *Im Retourenauftrag*, *In Gutschrift* oder *Im Retourenauftrag und in Gutschrift* aktualisiert wird. Retourenstatus werden einmal pro Stunde aktualisiert.
@@ -269,7 +269,7 @@ a| Wählen, ob <<Retouren abwickeln, eBay-Retouren>> abgerufen werden sollen. +
 | *"Nicht mehr vorrätig"-Option nutzen*
 a| Wählen, ob die "Nicht mehr vorrätig"-Option verwendet wird. +
 
-* *Ja* = Listings werden nicht beendet, wenn ein Artikel nicht vorrätig ist. Das Angebot wird angezeigt, kann aber nicht gekauft werden. Wenn der Artikel wieder vorrätig ist, werden die verkauften Stückzahlen bei eBay nicht auf Null gesetzt, sondern die Verkaufshistorie bleibt erhalten. Zusätzlich zu dieser Option muss die <<Bestandsautomatik aktivieren, Bestandsautomatik>> im Tab *Basiseinstellungen* aktiviert sein. Außerdem hat die Einstellung hier Vorrang vor der Einstellung <<Warenbestand einstellen, Angebote automatisch beenden>>, d.h. Angebote werden nicht beendet, sondern werden angezeigt und können nicht gekauft werden. +
+* *Ja* = Listings werden nicht beendet, wenn ein Artikel nicht vorrätig ist. Das Angebot wird angezeigt, kann aber nicht gekauft werden. Wenn der Artikel wieder vorrätig ist, werden die verkauften Stückzahlen bei eBay nicht auf Null gesetzt, sondern die Verkaufshistorie bleibt erhalten. Zusätzlich zu dieser Option muss die <<Bestandsautomatik aktivieren, Bestandsautomatik>> im Tab *Basiseinstellungen* aktiviert sein. Außerdem hat die Einstellung hier Vorrang vor der Einstellung <<Warenbestand abgleichen, Angebote automatisch beenden>>, d.h. Angebote werden nicht beendet, sondern werden angezeigt und können nicht gekauft werden. +
 * *Nein* = Listings werden beendet, wenn ein Artikel nicht vorrätig ist.
 
 | *Preisabgleich*
@@ -578,8 +578,8 @@ Automatische E-Mail an E-Mail-Adresse::
 ===== Automatischen E-Mail-Versand einrichten:
 
 . Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand*.
-. Wähle aus der Dropdown-Liste *Neue Bestellung über eBay* die E-Mail-Vorlage. Beachte dazu die Erläuterungen in <<#table-events-automatic-email-dispatch>>.
-. Speichere (terra:save[]) die Einstellung.
+. Wähle aus der Dropdown-Liste *Neue Bestellung über eBay* die E-Mail-Vorlage. Beachte dazu die Erläuterungen in xref:crm:e-mails-versenden.adoc#table-events-automatic-email-dispatch[dieser Tabelle].
+. Speichere (terra:save[]) die Einstellungen.
 --
 
 Automatische Nachricht an eBay-Benutzerkonto::
@@ -1575,7 +1575,7 @@ include::partial$manage-listings.adoc[tag=listing-processes]
 [#6000]
 == Angebote mit Varianten einstellen
 
-Das Einstellen von Artikeln mit mehreren Varianten ist in einem eBay-Angebot gebündelt möglich. Um Varianten erstellen zu können, musst du Attribute erstellen, die mit Artikeln verknüpft werden. Varianten sind xref:artikel:struktur.adoc#400[Kombinationen von Attributen]. Dabei werden bei jeder einzelnen Kombination, wie zum Beispiel Größe, Farbe und Material, Aufpreise berücksichtigt. Die mit dem Listing verknüpften Varianten werden beim Starten, Neustarten und Aktualisieren an eBay übermittelt. Weitere Informationen findest du bei eBay unter link:https://www.ebay.de/help/selling/listings/creating-managing-listings/creating-listings-variations?id=4150[Angebote mit Varianten einstellen^].
+Das Einstellen von Artikeln mit mehreren Varianten ist in einem eBay-Angebot gebündelt möglich. Um Varianten erstellen zu können, musst du Attribute erstellen, die mit Artikeln verknüpft werden. Varianten sind xref:artikel:struktur.adoc#250[Kombinationen von Attributen]. Dabei werden bei jeder einzelnen Kombination, wie zum Beispiel Größe, Farbe und Material, Aufpreise berücksichtigt. Die mit dem Listing verknüpften Varianten werden beim Starten, Neustarten und Aktualisieren an eBay übermittelt. Weitere Informationen findest du bei eBay unter link:https://www.ebay.de/help/selling/listings/creating-managing-listings/creating-listings-variations?id=4150[Angebote mit Varianten einstellen^].
 
 [IMPORTANT]
 .Varianten müssen bei eBay-Listings übereinstimmen
@@ -2733,7 +2733,7 @@ Auftragsstatus ändern, um Kaufabbruch zu akzeptieren:
 . Wähle einen Auftrag aus.
 . Ändere den Status des Auftrags in den Status für *Bay-Kaufabbruch akzeptiert*.
 . Speichere (terra:save[]) die Einstellungen. +
-→ Deine Entscheidung wird eBay automatisch mitgeteilt, wenn du die Ereignisaktion <<#9800, Kaufabbruch akzeptiert mitteilen>> eingerichtet hast.
+→ Deine Entscheidung wird eBay automatisch mitgeteilt, wenn du die Ereignisaktion <<#9700, eBay-Kaufabbruch akzeptieren>> eingerichtet hast.
 
 Um mehrere Aufträge gleichzeitig zu ändern, nutze die Gruppenfunktion. Wenn du bei noch unbezahlten Aufträgen die Anfrage akzeptieren willst, suche alle unbezahlten Aufträge im richtigen Status und ändere den Status der Aufträge per xref:auftraege:auftraege-verwalten.adoc#1700[Gruppenfunktion].
 
@@ -2775,7 +2775,7 @@ Auftragsstatus ändern, um Anfragen abzulehnen:
 . Wähle einen Auftrag.
 . Ändere den Status des Auftrags in den Status für *eBay-Kaufabbruch abgelehnt*.
 . Speichere (terra:save[]) die Einstellungen. +
-→ Deine Entscheidung wird eBay automatisch mitgeteilt, wenn du die Ereignisaktion <<#9900, Kaufabbruch abgelehnt mitteilen>> eingerichtet hast.
+→ Deine Entscheidung wird eBay automatisch mitgeteilt, wenn du die Ereignisaktion <<#9700, eBay-Kaufabbruch ablehnen>> eingerichtet hast.
 --
 
 [.collapseBox]
@@ -3156,7 +3156,7 @@ eBay-Listings importieren:
 | Eine bestimmte Plattform oder *ALLE* wählen. Mit der Wahl einer Plattform werden nur Market-Listings importiert, die auf dieser Plattform gelistet wurden. Alle Listings anderer Plattformen werden dann beim Importieren übersprungen. Dies ist unter anderem nützlich, wenn zum Beispiel deutsche eBay-Listings mit einem Service wie Webinterpret automatisiert übersetzt werden.
 
 | *Importiere in Verzeichnis*
-| Das <<Verzeichnisse erstellen, Verzeichnis>> wählen, in das die Listings importiert werden sollen. +
+| Das <<#3200, Verzeichnis>> wählen, in das die Listings importiert werden sollen. +
 Wurde kein Verzeichnis erstellt, wird das Standard-Verzeichnis verwendet.
 
 | *Lager für Warenbestand*
@@ -3165,7 +3165,7 @@ Wurde kein Verzeichnis erstellt, wird das Standard-Verzeichnis verwendet.
 | *Bestandsabhängigkeit*
 | Wählen, zwischen *Unbeschränkt (mit Abgleich)*, *Unbeschränkt (ohne Abgleich)*, *Beschränkt (mit Reservierung)* und *Beschränkt (ohne Reservierung)*. +
 *_Wichtig:_* Bei Wahl der Optionen *Beschränkt* (beide) oder *Unbeschränkt (mit Abgleich)* sollten bis zur Prüfung der Listings folgende Optionen deaktiviert werden: +
-<<Bestandsautomatik aktivieren, Bestandsautomatik aktivieren>> und <<Warenbestand einstellen, Angebote automatisch beenden>>.
+<<Bestandsautomatik aktivieren, Bestandsautomatik aktivieren>> und <<Warenbestand abgleichen, Angebote automatisch beenden>>.
 
 2+^| Importeinstellungen
 
