--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -93,28 +93,26 @@ https://partner.digitecgalaxus.ch/hc/de/articles/360016297139-Wie-kann-ich-die-V
 
 [[eu-hub-fiscal-representation]]
 .EU-Hub ohne und mit Fiskalvertretung
-[cols="1a,1a"]
+[cols="1,2a,2a"]
 |===
-|Direkte Lieferung _oder_ EU-Hub ohne Fiskalvertretung |EU-Hub mit Fiskalvertretung
+|  |EU-Hub ohne Fiskalvertretung |EU-Hub mit Fiskalvertretung
 
-|
+| Mehrwertsteuer
+| * Aufträge mit Rechnungsadresse in der Schweiz und Lieferadresse in der EU werden als Netto-Aufträge importiert.
 * Du bezahlst _keine_ Schweizer Mehrwertsteuer auf Aufträge über den EU-Hub.
-* Du verwendest die Zahlungsmethode *Galaxus Direct Checkout*.
+| * Du bezahlst Schweizer Mehrwertsteuer auf Aufträge über den EU-Hub.
 
-* In plentymarkets wird eine Nettorechnung mit der Währung Schweizer Franken generiert. Die Rechnungsadresse ist die Adresse der Kund:in.
-
-|
-* Du bezahlst Schweizer Mehrwertsteuer auf Aufträge über den EU-Hub.
-* Du verwendest die Zahlungsmethode *Galaxus Direct Checkout Fisc Rep*.
+| plentymarkets Einstellungen
+| * Du verwendest die Zahlungsmethode *Galaxus Direct Checkout*.
+| * Du verwendest die Zahlungsmethode *Galaxus Direct Checkout Fisc Rep*.
 * Du aktivierst die Option *Ich nutze den Galaxus EU-Hub und habe eine Fiskalvertretung in der Schweiz* im Menü *Einrichtung » Märkte » Galaxus » Auftragsimport*.
 * Im Standort *Schweiz* ist deine Umsatzsteuer-ID für die Schweiz gespeichert.
 
-Beim Import des Auftrags passiert folgendes:
-
-* Der Hauptauftrag wird erstellt. In diesem Hauptauftrag ist die Schweizer Adresse der Endkund:in angegeben.
+| Ablauf bei Auftragsimport
+|* In plentymarkets wird eine Nettorechnung mit der Währung Schweizer Franken generiert. Die Rechnungsadresse ist die Adresse der Kund:in.
+| * Der Hauptauftrag wird erstellt. In diesem Hauptauftrag ist die Schweizer Adresse der Endkund:in angegeben.
 * Ein Lieferauftrag wird erstellt. Lieferadresse dieses Lieferauftrags ist der EU-Hub. Die Adresse des EU-Hubs wird automatisch eingefügt. Auch auf den Versandetiketten wird die Adresse des EU-Hubs eingefüllt.
 * In plentymarkets wird eine Bruttorechnung mit der Währung Schweizer Franken generiert. Die Rechnungsadresse ist die Adresse der Kund:in.
-
 |===
 
 === Besonderheiten der Galaxus-Auftragsabwicklung
