--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -111,6 +111,7 @@ Einstellungen
 
 | Ablauf bei Auftragsimport
 |* In plentymarkets wird eine Nettorechnung mit der Währung Schweizer Franken generiert. Die Rechnungsadresse ist die Adresse der Kund:in.
+* Du richtest das System so ein, dass als Lieferanschrift die Adresse des EU-Hubs verwendet wird.
 | * Der Hauptauftrag wird erstellt. In diesem Hauptauftrag ist die Schweizer Adresse der Endkund:in angegeben.
 * Ein Lieferauftrag wird erstellt. Lieferadresse dieses Lieferauftrags ist der EU-Hub. Die Adresse des EU-Hubs wird automatisch eingefügt. Auch auf den Versandetiketten wird die Adresse des EU-Hubs eingefüllt.
 * In plentymarkets wird eine Bruttorechnung mit der Währung Schweizer Franken generiert. Die Rechnungsadresse ist die Adresse der Kund:in.
