--- a/docs/de-de/modules/maerkte/partials/mirakl-markets-faq.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-markets-faq.adoc
@@ -49,7 +49,7 @@ Prüfe als erstes die Bestandseinstellungen: Betrifft das Problem nur Varianten 
 --
 
 [.collapseBox]
-.Du kannst nicht auf das Attribut-Hilfetool zugreifen und sieht stattdessen *Hier entsteht dein plentymarkets Shop*
+.Du kannst nicht auf das Attribut-Hilfetool zugreifen und sieht stattdessen "Hier entsteht dein plentymarkets Shop"
 --
 Wahrscheinlich ist dein plentyShop gesperrt. Entsperre den plentyShop im Menü Einrichtung » Mandant » Standard » Webshop » Shop sperren. Vergiss nicht, den plentyShop danach wieder zu sperren.
 --
