ADD practical example to nav.adoc file

--- a/docs/de-de/modules/crm/pages/praxisbeispiele.adoc
+++ b/docs/de-de/modules/crm/pages/praxisbeispiele.adoc
@@ -1,4 +1,4 @@
-= FAQ
+= Praxisbeispiele
 :keywords:
 :description: In diesem Bereich findest du hilfreiche Praxisbeispiele aus dem Themengebiet CRM.
 :author: team-crm
