Kathrin/mirakl offer price (#792)
* push

* push

* Update mirakl-creating-properties.adoc

* push

* push

* Update mediamarkt.adoc

--- a/docs/de-de/modules/maerkte/pages/spielwiese.adoc
+++ b/docs/de-de/modules/maerkte/pages/spielwiese.adoc
@@ -81,3 +81,42 @@ latexmath:[\mbox{MeldΔ} = {(\mbox{dynamischer Meldebestand} - (\mbox{Nettobesta
 latexmath:[\mbox{MeldΔ} = {(\mbox{dynamischer Meldebestand} - (\mbox{Nettobestand} + (\mbox{nachbestellte Menge})}]
 
 ---
+
+
+
+ifdef::voelkner[]
+| Datenfelder für Angebotspreise: +
+*Rabatt Startzeit* +
+*Rabatt Endzeit*
+
+| Optional kannst du zeitlich begrenzte Angebotspreise an Voelkner übermitteln.
+
+Voraussetzungen für den korrekten Export von Angebotspreisen:
+
+* Du hast einen Verkaufspreis des Typs *Aktionspreis* erstellt. +
+  *_Tipp:_* Vergiss nicht, für diesen Aktionspreis die Herkünfte *Mirakl* und *Voelkner* zu aktivieren.
+. Du hast eine Eigenschaft des Typs *Datum* für das Startdatum erstellt. Nenne diese Eigenschaft zum Beispiel *Voelkner Rabatt Startzeit*.
+. Du hast eine Eigenschaft des Typs *Datum* für das Enddatum erstellt. Nenne diese Eigenschaft zum Beispiel *Voelkner Rabatt Endzeit*.
+* Du hast im Katalog die folgenden Zuordnungen vorgenommen:
+  ** Marktplatz-Datenfeld *Angebotspreis* = plentymarkets Verkaufspreis des Typs *Aktionspreis*
+  ** Marktplatz-Datenfeld *Rabatt Startzeit* = plentymarkets Eigenschaft *Voelkner Rabatt Startzeit* des Typs *Datum*
+  ** Marktplatz-Datenfeld *Rabatt Endzeit* = plentymarkets Eigenschaft *Voelkner Rabatt Endzeit* des Typs *Datum*
+
+[.instruction]
+Angebotspreis festlegen:
+
+. Verknüpfe den Verkaufspreis des Typs *Aktionspreis* mit der Variante.
+. Speichere einen Preis für den Aktionspreis.
+. Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Startzeit*.
+. Speichere ein Datum für die Eigenschaft.
+. Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Endzeit*.
+. Speichere ein Datum für die Eigenschaft.
+endif::voelkner[]
+
+[.collapseBox]
+.Was ist eine Eigenschaft?
+--
+Mit Eigenschaften kannst du deine Varianten detailliert beschreiben. Du kannst beispielweise technische Details einer Variante angeben, indem du eine Eigenschaft dafür anlegst, wie zum Beispiel die Eigenschaft _Bluetooth_ für Kopfhörer. +
+Außerdem kannst du Eigenschaften verwenden, um Informationen an einer Variante zu speichern, die ein Marktplatz verlangt, für die es aber keine eigene Einstellung in plentymarkets gibt. So kannst du beim Artikelexport über Kataloge für alle Datenfelder des Marktplatzes, für die es in plentymarkets keine eigene Einstellung gibt, Eigenschaften anlegen und mit den Datenfeldern verknüpfen. Wenn der Marktplatz zum Beispiel bestimmte Spezifikationen für Kontaktlinsen verlangt, kannst du diese mit Eigenschaften angeben. +
+Du willst noch mehr über Eigenschaften wissen? Weitere Informationen findest du auf der Seite xref:artikel:eigenschaften.adoc#500[Merkmale und Eigenschaften].
+--
