--- a/docs/de-de/modules/maerkte/partials/mirakl-markets-faq.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-markets-faq.adoc
@@ -1,5 +1,14 @@
+ifdef::voelkner[]
+== Fehlerberichte
+
+Im plentymarkets Backend findest du folgende Berichte:
+
+* Zu Produktübertragungen im Menü *Daten » Voelkner Artikelexport-Berichte*
+* Zu Angebotsübertragungen im Menü *Daten » Voelkner Angebotsexport-Berichte*
+endif::voelkner[]
+
 [#mirakl-faq]
-== FAQ
+== FAQ und Fehlerbehebung
 
 [.collapseBox]
 .Für eine oder mehrere Varianten wurde ein falscher Bestand übertragen. Was kann ich tun?
@@ -26,4 +35,21 @@ Prüfe als erstes die Bestandseinstellungen: Betrifft das Problem nur Varianten 
 
 *_Wichtig:_* Angebote für Varianten ohne Bestandsbindung werden einmal pro Nacht zu {market} exportiert. Wenn du die Einstellungen korrigierst, werden die Varianten also nicht sofort exportiert.
 
+--
+
+[.collapseBox]
+.Du kannst nicht auf das Attribut-Hilfetool zugreifen.
+--
+*_Mögliche Ursachen:_*
+
+* Du hast den Assistenten *{assistant-name}* noch nicht abgeschlossen.
+* Du sieht stattdessen *Hier entsteht dein plentymarkets Shop*? Wahrscheinlich ist dein plentyShop gesperrt. Entsperre den plentyShop im Menü *Einrichtung » Mandant » Standard » Webshop » Shop sperren*. Vergiss nicht, den plentyShop danach wieder zu sperren.
+* Die Tabelle der gültigen Attributwerte wird immer über Nacht aktualisiert. Nach dem Installieren des Plugins in deinem plentymarkets System werden die gültigen Werte also erst am nächsten Tag ausgegeben.
+* Wenn du im Assistenten die falsche API-Umgebung und/oder den falschen API-Schlüssel eingetragen hast, können die gültigen Attributwerte nicht geladen werden.
+--
+
+[.collapseBox]
+.Du kannst nicht auf das Attribut-Hilfetool zugreifen und sieht stattdessen "Hier entsteht dein plentymarkets Shop"
+--
+Wahrscheinlich ist dein plentyShop gesperrt. Entsperre den plentyShop im Menü Einrichtung » Mandant » Standard » Webshop » Shop sperren. Vergiss nicht, den plentyShop danach wieder zu sperren.
 --
