--- a/docs/de-de/modules/maerkte/pages/mediamarkt.adoc
+++ b/docs/de-de/modules/maerkte/pages/mediamarkt.adoc
@@ -5,27 +5,58 @@
 
 :mediamarkt:
 :market: MediaMarkt
+:plugin-name: MediaMarkt
+:plugin-link: https://marketplace.plentymarkets.com/mediamarkt_6918
 :type-of-market: Marktplatz
 :registration-url: https://www.mediamarkt.de/de/about-us/marketplace
 :marketplace-url: https://marketplace.plentymarkets.com/mediamarkt_6918
 :assistant-name: MediaMarkt
-
-
-Auf dieser Seite erfährst du, wie du die Schnittstelle zu {market} in plentymarkets einrichtest. Auf MediaMarkt finden Kund:innen eine große Produktauswahl rund um Technik, Elektronik und Multimedia.
-
-include::partial$mirakl-first-steps.adoc[]
-
 :valid-values-zip: https://drive.google.com/file/d/1a_QY4VOIuC2-A-9jerGDAOmYP72907Xt/view?usp=sharing
 :mirakl-menu-shipping: Platform Settings » Shipping
 :referrer-name: pass:quotes[Herkunft *MediaMarkt*]
+:category-example: VIDEO CASSETTES
+
+Auf MediaMarkt finden Kund:innen eine große Produktauswahl rund um Technik, Elektronik und Multimedia.
+
+Auf dieser Seite erfährst du, wie du die Schnittstelle zu {market} in plentymarkets einrichtest.
+
+include::partial$mirakl-first-steps.adoc[]
+
+[#order-process]
+== Ablauf der Auftragsabwicklung
+
+Aufträge, die auf MediaMarkt erzeugt wurden, werden alle 15 Minuten in dein plentymarkets System importiert.
+
+So läuft die Auftragsabwicklung bei MediaMarkt ab:
+
+* Die Händler:in akzeptiert den Auftrag über eine Ereignisaktion.
+* Die Zahlung wird von MediaMarkt eingezogen.
+* Mit der Zahlungszusicherung werden die Rechnungs- und Lieferadresse am Auftrag in deinem plentymarkets System aktualisiert.
+* Über eine Ereignisaktion werden Versanddienstleister und Paketnummer am Auftrag in Mirakl aktualisiert.
+* Über eine Ereignisaktion wird eine Rechnung an MediaMarkt gesendet.
+
+[#allgemeine-informationen]
+== Häufigkeit des Datenaustauschs
+
+include::partial$mirakl-data-exchange-table.adoc[]
 
 [#api-schluessel]
 == API-Schlüssel erzeugen
 
 include::partial$mirakl-api-key.adoc[]
 
+[#300]
+== Marktplatz in plentymarkets einrichten
+
+Du hast die Plugins *Mirakl Connector* und *Mediamarkt* installiert und einen API-Schlüssel erzeugt? Super. Nun richtest du den Marktplatz in plentymarkets ein.
+
+[#marktplatz-assistent-durchlaufen]
+=== Einrichtungsassistenten durchlaufen
+
+include::partial$mirakl-market-assistant.adoc[]
+
 [#auftragsherkunft]
-== Auftragsherkunft aktivieren
+=== Auftragsherkunft aktivieren
 
 :market: {market}
 :referrer: {market}
@@ -35,7 +66,7 @@ include::partial$mirakl-api-key.adoc[]
 include::partial$auftragsherkunft-aktivieren.adoc[]
 
 [#verkaufspreis]
-== Verkaufspreis festlegen
+=== Verkaufspreis festlegen
 
 :referrer-price: {market}
 :mirakl-verkaufspreis:
@@ -46,18 +77,6 @@ include::partial$verkaufspreis-festlegen.adoc[]
 == Eigenschaften erstellen
 
 include::partial$mirakl-creating-properties.adoc[]
-
-[#marktplatz-assistent-durchlaufen]
-== {market} Assistent durchlaufen
-
-include::partial$mirakl-market-assistant.adoc[]
-
-:category-example: VIDEO CASSETTES
-
-[#allgemeine-informationen]
-== Informationen zum automatischen Datenaustausch
-
-include::partial$mirakl-data-exchange-table.adoc[]
 
 [#artikelexport-katalog]
 == Artikelexport einrichten
@@ -80,15 +99,16 @@ include::partial$catalogue-assistant-config.adoc[]
 [#datenfelder-zuordnen]
 === Datenfelder im Katalog zuordnen
 
-Nachdem du einen Katalog erstellt hast, ordnest du die Datenfelder des Marktplatzes den in plentymarkets gespeicherten Artikeldaten zu. Informationen dazu, welche Daten für welches Datenfeld des Marktplatzes übertragen werden müssen, findest du in der Dokumentation des Marktplatzes.
+Ordne nun die Marktplatz-Datenfelder im Katalog den in plentymarkets gespeicherten Artikeldaten zu.
 
-[TIP]
-.Eigenschaften verwenden
-====
-Verwende xref:artikel:eigenschaften.adoc#500[Eigenschaften], um Werte für Marktplatz-Datenfelder zu übergeben, für die es keine Entsprechung in plentymarkets gibt.
-====
+Informationen dazu, welche Daten für welches Datenfeld des Marktplatzes übertragen werden müssen, findest du in der Dokumentation des Marktplatzes.
 
 include::partial$catalogue-mapping.adoc[]
+
+[#recommended-mappings]
+=== Empfehlungen für Datenfeld-Zuordnungen
+
+include::partial$recommendation-text.adoc[]
 
 [[katalog-mirakl-zuordnungen]]
 .{market}-Zuordnungen
@@ -97,11 +117,9 @@ include::partial$catalogue-mapping.adoc[]
 |Marktplatz-Datenfeld |plentymarkets Datenfeld
 
 | *Brand*
-a| Erstelle für dieses Marktplatz-Datenfeld eine Eigenschaft vom Typ *Text*. Erstelle einen Eigenschaftswert für alle Einheiten, die du für deine Produkte verwendest. Achte darauf, den Code einzugeben und nicht das Label. +
+a| Erstelle für dieses Marktplatz-Datenfeld eine Eigenschaft vom Typ *Text*.
 
 *_Tipp:_* Alle möglichen Werte findest du in der entsprechenden CSV-Datei. +
-
-*_Hinweis:_* Beachte, dass du für dieses Marktplatz-Datenfeld _keine_ Eigenschaften vom Typ *Mehrfachauswahl* verwenden kannst. Beim Versuch eine Eigenschaft vom Typ *Mehrfachauswahl* im Katalog zuzuordnen, wird dies zu einer Fehlübertragung führen.
 
 | *Title*
 a| Ordne für dieses Marktplatz-Datenfeld eines oder mehrere der folgenden plentymarkets Datenfelder zu. Verwende mindestens 20 und maximal 100 Zeichen. +
@@ -144,7 +162,7 @@ Ordne das folgende plentymarkets Datenfeld als Ausweich-Datenfeld zu:
 
 * *Variante » Varianten-ID*
 
-| *Weight (according to the manufacturer)**
+| *Weight (according to the manufacturer)*
 a| Ordne für dieses Marktplatz-Datenfeld das folgende plentymarkets Datenfeld zu:
 
 * *Variante » Gewicht Brutto g*
@@ -169,7 +187,7 @@ a| Ordne für dieses Marktplatz-Datenfeld das folgende plentymarkets Datenfeld z
 * *Variante » Länge mm*
 
 | _Datenfelder für Bilder_
-| Beim Marktplatz {market} werden Zuordnungen für Produktbilder aktuell ignoriert. Variantenbilder werden automatisch exportiert. Die Bilder werden anhand der Bildposition priorisiert.
+| Beim Marktplatz {market} werden Katalogzuordnungen für Produktbilder aktuell ignoriert. Variantenbilder werden automatisch exportiert. Die Bilder werden anhand der Bildposition priorisiert.
 
 *_Beispiel:_* Für das Marktplatz-Datenfeld *Main Product Image* wird das Bild der Variante mit der niedrigsten Position exportiert.
 
@@ -179,28 +197,10 @@ Die folgenden Marktplatz-Datenfeld werden also automatisch befüllt, egal welche
 * Additional Product Image 1
 * Additional Product Image 2
 
-| _Datenfelder *[Datenfeld] (ES)*_
+| _Datenfelder mit Zusatz *(ES)*_
 |
 Ordne Marktplatz-Datenfelder mit dem Zusatz *(ES)* kein plentymarkets Datenfeld zu. Deine Produkte werden trotzdem zu MIRAKL exportiert.
 |===
-
-[#varianten-mit-katalog-kategorie-verknüpfen]
-== Varianten mit {market} Katalog-Kategorie verknüpfen
-
-include::partial$mirakl-data-link-categories.adoc[]
-
-[#eigenschaften-mit-varianten-verknuepfen]
-=== Eigenschaften mit Varianten verknüpfen und Werte speichern
-
-include::partial$properties-link.adoc[]
-
-[#catalogue-activation]
-== Katalogexport aktivieren
-
-:interval: täglich
-:market: {market}
-
-include::partial$catalogue-activation.adoc[]
 
 [#marktplatzspezifische-werte]
 === Markplatzspezifische Werte übertragen
@@ -227,16 +227,13 @@ Standardmäßig wird bei der Übertragung eines Produktes, für das noch keine M
 
 Gib im Katalog eine gültige EAN an und übertrage diese an MediaMarkt.
 
-[#produkt-und-angebotsdaten]
-== Produkt- und Angebotsdaten übertragen
+[#prepare-variations]
+== Varianten vorbereiten
 
-:profile-free-shipping: Free Shipping (FS)
-:market-backend-shipping: Platform Settings » Shipping
-
-include::partial$mirakl-data-product-data-export.adoc[]
+Bereite nun deine Varianten für {market} vor.
 
 [#variantenverfuegbarkeit]
-== Variantenverfügbarkeit einstellen
+=== Variantenverfügbarkeit einstellen
 
 :market-availability: {market}
 :option-availability: {market}
@@ -245,20 +242,37 @@ include::partial$mirakl-data-product-data-export.adoc[]
 
 include::partial$variantenverfuegbarkeit.adoc[]
 
+[#varianten-mit-katalog-kategorie-verknüpfen]
+=== Varianten mit {market} Katalog-Kategorie verknüpfen
+
+include::partial$mirakl-data-link-categories.adoc[]
+
+[#eigenschaften-mit-varianten-verknuepfen]
+=== Eigenschaften mit Varianten verknüpfen und Werte speichern
+
+include::partial$properties-link.adoc[]
+
+[#produkt-und-angebotsdaten]
+== Produkt- und Angebotsdaten übertragen
+
+:profile-free-shipping: Free Shipping (FS)
+:market-backend-shipping: Platform Settings » Shipping
+
+include::partial$mirakl-data-product-data-export.adoc[]
+
+[#catalogue-activation]
+== Katalogexport aktivieren
+
+:interval: täglich
+:market: {market}
+
+include::partial$catalogue-activation.adoc[]
+
+
 [#auftragsabwicklung-automatisieren]
 == Auftragsabwicklung automatisieren
 
-Aufträge, die auf MediaMarkt erzeugt wurden, werden alle 15 Minuten in dein plentymarkets System importiert.
-
-So läuft die Auftragsabwicklung bei MediaMarkt ab:
-
-* Die Händler:in akzeptiert den Auftrag über eine Ereignisaktion.
-* Die Zahlung wird von MediaMarkt eingezogen.
-* Mit der Zahlungszusicherung werden die Rechnungs- und Lieferadresse am Auftrag in deinem plentymarkets System aktualisiert.
-* Über eine Ereignisaktion werden Versanddienstleister und Paketnummer am Auftrag in Mirakl aktualisiert.
-* Über eine Ereignisaktion wird eine Rechnung an MediaMarkt gesendet.
-
-Die folgenden Schritte der Auftragsabwicklung kannst du automatisieren, indem du Ereignisaktionen einrichtest:
+Die folgenden Schritte der Auftragsabwicklung kannst du mit Ereignisaktionen automatisieren:
 
 * Informiere MediaMarkt darüber, dass der Auftrag bestätigt wurde. <<#auftragsbestaetigung-mediamarkt, Wie?>>
 
