--- a/docs/de-de/modules/business-entscheidungen/pages/auftraege.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/auftraege.adoc
@@ -54,7 +54,7 @@ include::partial$auftragsherkunft-zahlungsdatum.adoc[]
 === Enddatum Abo
 
 :kennzahl: Die Kennzahl Aufträge
-:das-bedeutet: Bei der Berechnung wird dementsprechend das Enddatum dess Abonnements einbezogen.
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Enddatum des Abonnements einbezogen.
 
 include:partial$subscription-end-date.adoc[]
 
@@ -152,7 +152,7 @@ include::partial$retourengrund-erstellungsdatum.adoc[]
 === Startdatum Abo
 
 :kennzahl: Die Kennzahl Aufträge
-:das-bedeutet: Bei der Berechnung wird dementsprechend das Startdatum dess Abonnements einbezogen.
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Startdatum des Abonnements einbezogen.
 
 include:partial$subscription-start-date.adoc[]
 
