--- a/docs/de-de/modules/business-entscheidungen/pages/absatz.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/absatz.adoc
@@ -43,7 +43,7 @@ include::partial$artikelkategorie-erstellungsdatum.adoc[]
 === Auftragsherkunft Plugin, Erstellungsdatum
 
 :kennzahl: Der Absatz
-:das-bedeutet: So erkennst du auf einen Blick, welche Stückzahlen aufgeschlüsselt nach den Plugins, über die sie in dein plentymarkets System gelangen, verkauft werden. Differenziert wird zusätzlich nach dem Erstellungsdatum der Aufträge.
+:das-bedeutet: So erkennst du auf einen Blick, welche Stückzahlen aufgeschlüsselt nach den Plugins, über die Aufträge in dein plentymarkets System gelangen, verkauft werden. Differenziert wird zusätzlich nach dem Erstellungsdatum der Aufträge.
 
 include:partial$order-referrer-plugin-creation-date.adoc[]
 
