ADD translation for practical example

--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -105,6 +105,8 @@
 ** xref:crm:ar-list.adoc[Accounts receivable]
 ** xref:crm:using-the-ticket-system.adoc[Ticket system]
 ** xref:crm:sending-newsletters.adoc[Newsletters]
+** xref:crm:practical-examples.adoc[Practical examples]
+*** xref:crm:practical-example-send-tracking-url.adoc[Sending tracking URLs to customers]
 ** xref:crm:managing-contacts.adoc[Contacts (old tool)]
 * xref:orders:orders.adoc[Orders]
 ** xref:orders:basic-settings.adoc[Basic settings]
