--- a/docs/en-gb/modules/markets/partials/plugin-market-not-in-menu.adoc
+++ b/docs/en-gb/modules/markets/partials/plugin-market-not-in-menu.adoc
@@ -4,6 +4,6 @@
 The menu *Setup » Markets » {market}* is only shown after you carry out the following steps:
 
 * The plugin is installed in the plugin set in which the default client is linked.
-. The plugin was provisioned.
-. The order referrer *{market}* is active in the menu *Setup » Orders » Order referrer*.
+* The plugin was provisioned.
+* The order referrer *{market}* is active in the menu *Setup » Orders » Order referrer*.
 --
