--- a/docs/de-de/modules/maerkte/partials/plugin-market-not-in-menu.adoc
+++ b/docs/de-de/modules/maerkte/partials/plugin-market-not-in-menu.adoc
@@ -4,6 +4,6 @@
 Das Menü *Einrichtung » Märkte » {market}* wird nur angezeigt, wenn du die folgenden Schritte ausgeführt hast:
 
 * Das Plugin ist in dem Plugin-Set installiert, in dem der Standard-Mandant verknüpft ist.
-. Das Plugin wurde produktiv bereitgestellt.
-. Die Auftragsherkunft *{market}* wurde im Menü *Einrichtung » Aufträge » Auftragsherkunft* aktiviert.
+* Das Plugin wurde produktiv bereitgestellt.
+* Die Auftragsherkunft *{market}* wurde im Menü *Einrichtung » Aufträge » Auftragsherkunft* aktiviert.
 --
