--- a/docs/de-de/modules/crm/pages/praxisbeispiel-tracking-url-senden.adoc
+++ b/docs/de-de/modules/crm/pages/praxisbeispiel-tracking-url-senden.adoc
@@ -1,5 +1,5 @@
 = Praxisbeispiel: Tracking-URL an Kund:innen senden
-:keywords:
+:keywords: Paketverfolgung, Tracking-URL, Tracking-Link, Paket verfolgen E-Mail
 :description: Dieses Praxisbeispiel beschreibt, wie du die Tracking-URL automatisch an deine Kund:innen sendest, wenn die Paketnummer des Versanddienstleisters am Auftrag verfügbar ist.
 :author: team-crm
 
