--- a/docs/en-gb/modules/crm/pages/practical-example-send-tracking-url.adoc
+++ b/docs/en-gb/modules/crm/pages/practical-example-send-tracking-url.adoc
@@ -1,5 +1,5 @@
 = Practical example: Sending tracking URLs to customers
-:keywords:
+:keywords: practical example, send tracking url, track parcel, track shipment email
 :description: This practical example describes how to automatically send the tracking URL to your customers as soon as the package number from the shipping service provider is available at the order.
 :author: team-crm
 
