ADD translation for practical example (#815)
* ADD translation for practical example

* ADD keywords

--- a/docs/de-de/modules/crm/pages/praxisbeispiel-tracking-url-senden.adoc
+++ b/docs/de-de/modules/crm/pages/praxisbeispiel-tracking-url-senden.adoc
@@ -1,5 +1,5 @@
 = Praxisbeispiel: Tracking-URL an Kund:innen senden
-:keywords:
+:keywords: Paketverfolgung, Tracking-URL, Tracking-Link, Paket verfolgen E-Mail
 :description: Dieses Praxisbeispiel beschreibt, wie du die Tracking-URL automatisch an deine Kund:innen sendest, wenn die Paketnummer des Versanddienstleisters am Auftrag verfügbar ist.
 :author: team-crm
 
@@ -11,7 +11,7 @@ Ich möchte eine Tracking-URL an meine Kund:innen senden, sobald die Paketnummer
 * Tracking-URL am Versanddienstleister speichern
 * E-Mail-Vorlage im EmailBuilder einrichten
 ** Variable `Tracking-URL` in Vorlage einfügen
-* Ereignisaktion verknüpfen, die die Vorlage versendet, wenn das Paket beim Dienstleister registriert wurde und eine Paketnummer am Auftrag erstellt ist.
+* Ereignisaktion verknüpfen, die die Vorlage versendet, wenn das Paket beim Dienstleister angemeldet wurde und eine Paketnummer am Auftrag erstellt ist.
 
 [#tracking-url-speichern]
 == Tracking-URL am Versanddienstleister speichern
@@ -81,7 +81,7 @@ Erstelle die E-Mail-Vorlage im Menü *Einrichtung » Mandant » [Mandant wählen
 
 --
 
-[#ereignisaktion einrichten]
+[#ereignisaktion-einrichten]
 == Ereignisaktion einrichten
 
 Richte nun eine Ereignisaktion ein, die den Versand der E-Mail-Vorlage für die Paketverfolgung auslöst, sobald die Paketnummer am Auftrag verfügbar ist.
@@ -128,4 +128,4 @@ image::praxisbeispiel-ereignisaktion-paketnummer.png[width=640, height=360]
 
 * xref:fulfillment:versand-vorbereiten.adoc#800[Versanddienstleister erstellen]
 * xref:crm:emailbuilder.adoc#[EmailBuilder]
-* xref:crm:e-mails-versenden.adoc[E-Mails versenden] (alte Vorgehensweise)
+* xref:crm:e-mails-versenden.adoc#[E-Mails versenden] (alte Vorgehensweise)
