--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -855,7 +855,7 @@ EU-Hub ohne Fiskalvertretung::
 * Name und Adresse des Rechnungsstellers
 * Rechnungsadresse der Kund:in in der Schweiz
 * Galaxus Auftragsnummer, also die Einkaufsauftrags-Nr. der Digitec Galaxus AG
-* Hinweis `Frankatur: DAPG` (Delivery At Place) Incoterm
+* Hinweis `Frankatur: DAP`
 * Nettorechnungsbetrag, also ohne Umsatzsteuer
 * Gesetzlicher Vermerk, dass diese Rechnung zu einer steuerfreien Lieferung gehört: +
  `Steuerfreie Ausfuhrlieferung nach § 4 Nr. 1a) i.V.m. § 6 UstG`
@@ -1046,7 +1046,7 @@ image::maerkte:mytoys-delivery-note-settings-2.png[]
 . Gehe zu einem Eingabefeld, das noch keine Zahlungshinweise enthält.
 . Wähle aus der Dropdown-Liste *Zahlungsart: bitte wählen* die Option *Galaxus Direct Checkout Fisc Rep*.
 . Kopiere den folgenden Hinweis in das Eingabefeld: +
-`Frankatur: DAP`
+`Frankatur: DDP`
 
 *_Tipp:_* Alternativ kannst du diesen Hinweis auch direkt in deiner PDF-Vorlage für Rechnungen von Galaxus platzieren.
 
