--- a/docs/de-de/modules/maerkte/pages/check24.adoc
+++ b/docs/de-de/modules/maerkte/pages/check24.adoc
@@ -130,6 +130,8 @@ Erstelle wie unten beschrieben das Exportformat *Check24DE-Plugin* für Check24.
 * Pro Export werden maximal 4000 Artikel exportiert. Wenn du mehr Artikel exportierst, wird automatisch ein zweiter Export ausgeführt. Um den zweiten Export anzuzeigen, setze den Parameter *&amp;Page* = im Export-Link auf *2*.
 * Technische Daten werden in der letzten Spalte der Exportdatei an Check24 übergeben.
 
+*_Hinweis:_* Das Exportformat *Check24DE Fashion* erstellst du auf die gleiche Weise. Beachte aber, dass dieses Exportformat veraltet ist und nur in Ausnahmefällen und in Absprache mit Check24 verwendet werden sollte.
+
 [.instruction]
 .Exportformat Check24DE-Plugin erstellen:
 
@@ -265,14 +267,14 @@ Erstelle wie unten beschrieben das Exportformat *Check24DE-Plugin* für Check24.
 |===
 
 [#500-2]
-==== Check24DE: Verfügbare Spalten der Exportdatei
+==== Check24DE: Verfügbare Spalten der Exportdatei *Check24DE-Plugin*
 
 :export-format: Check24DE-Plugin
 
 include::partial$exportdatei-herunterladen.adoc[]
 
 [[spalten-exportdatei-check24]]
-.Check24DE: Verfügbare Spalten der Exportdatei
+.Verfügbare Spalten der Exportdatei *Check24DE-Plugin*
 [cols="1,3"]
 |===
 | Spaltenbezeichnung | Erläuterung
@@ -332,6 +334,229 @@ gewählten Mandanten in den Formateinstellungen.
 
 | weight
 | Das *Gewicht* wie im Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Einstellungen » Maße* definiert.
+|===
+
+==== Check24DE: Verfügbare Spalten der Exportdatei *Check24DE Fashion*
+
+:export-format: Check24DE Fashion
+
+*_Hinweis:_* Das Exportformat *Check24DE Fashion* ist veraltet, da es die Fashion-Kategorie auf Check24 nicht mehr gibt. Deshalb sollte dieses Exportformat nur in Ausnahmefällen und in Absprache mit Check24 verwendet werden.
+
+include::partial$exportdatei-herunterladen.adoc[]
+
+[[spalten-exportdatei-check24]]
+.Verfügbare Spalten der Exportdatei *Check24DE Fashion*
+[cols="1,3"]
+|===
+| Spaltenbezeichnung | Erläuterung
+
+| Produktname +
+(Pflichtangabe)
+| * entsprechend der Formateinstellung *Artikelname* 
+
+_oder_ 
+
+* Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Produktname*
+
+| Variation-ID +
+(Pflichtangabe)
+| Die *Parent-SKU* der Variante für Check24
+
+_oder_
+
+* eine Zeichenkette gemäß "Parent-SKU"-"Attributswert-ID", wenn ein Farb-Attribut an der Variante gespeichert ist
+
+| Model-ID +
+(Pflichtangabe)
+| * *Parent-SKU* der Variante für Check24
+
+| Kategorie-Pfad +
+(Pflichtangabe)
+| * Kategoriepfad der Standard-Kategorie des Mandanten, der in den Einstellungen gewählt wurde 
+
+_oder_ 
+
+* Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Kategorie-Pfad*
+
+| Kurzbeschreibung
+| * entsprechend der Formateinstellung *Vorschautext* 
+
+_oder_ 
+
+* Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Kurzbeschreibung*
+
+*_Hinweis:_* Merkmale werden bevorzugt.
+
+| Ausführliche Beschreibung +
+(Pflichtangabe)
+| * entsprechend der Formateinstellung *Beschreibung*
+
+_oder_
+
+* Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Ausführliche Beschreibung*
+
+*_Hinweis:_* Merkmale werden bevorzugt.
+
+| Amazon Sales Rank
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Amazon Sales Rank*
+
+| Unverbindliche Preisempfehlung
+| * *Verkaufspreis* von Typ *UVP*
+
+| EAN +
+(Pflichtangabe)
+| * entsprechend der Formateinstellung *Barcode*
+
+_oder_
+
+* Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *EAN*
+
+*_Hinweis:_* Merkmale werden bevorzugt.
+
+| ASIN
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *ASIN*
+
+| MPNR
+| * *Modell* der Variante
+
+_oder_
+
+* Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *MPNR*
+
+*_Hinweis:_* Merkmale werden bevorzugt.
+
+| SKU
+| * *SKU* der Variante für Check24.de mit Account-ID *0*
+
+| UPC
+| * Barcode vom Typ *UPC*
+
+_oder_
+
+* Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *UPC*
+
+*_Hinweis:_* Merkmale werden bevorzugt.
+
+| Bild-URL #1 - #20
+| * URL-Pfad der Artikelbilder entsprechend der Formateinstellung *Bild* +
+Wenn Farbvariationen vorliegen, werden nur die Bilder, die mit der jeweiligen Variante verknüpft sind, übertragen. Ansonsten werden alle Bilder exportiert.
+
+| Absatzform
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Absatzform*
+
+| Schuhspitze
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Schuhspitze*
+
+| Geschlecht +
+(Pflichtangabe)
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Geschlecht*
+
+| Altersgruppe +
+(Pflichtangabe)
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Altersgruppe*
+
+| Größe +
+(Pflichtangabe)
+| * Attribut mit der Attributverknüpfung *Größe* für Google Shopping
+
+_oder_
+
+* Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Größe*
+
+*_Hinweis:_* Attribute werden bevorzugt.
+
+| Größensystem +
+(Pflichtangabe)
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Größensystem*
+
+| Marke +
+(Pflichtangabe)
+| * *Herstellername* des Artikels 
+
+_oder_
+
+* Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Marke* 
+
+*_Hinweis:_* Der *Externe Name* unter *Einrichtung » Artikel » Hersteller* wird bevorzugt, wenn vorhanden.
+
+| Material +
+(Pflichtangabe)
+| * Attribut mit der Attributverknüpfung *Material* für Google Shopping
+
+_oder_
+
+* Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Material*
+
+*_Hinweis:_* Attribute werden bevorzugt.
+
+| Innenfutter
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Innenfutter*
+
+| Absatzhöhe
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Absatzhöhe*
+
+*_Hinweis:_* Am Artikel sowohl das Maß als auch die Maßeinheit als Merkmalwert eintragen. Beispiel: "2 cm"
+
+| Sohlenmaterial
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Sohlenmaterial*
+
+| Passform
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Passform*
+
+| Verschluss
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Verschluss*
+
+| Schafthöhe
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Schafthöhe*
+
+*_Hinweis:_* Am Artikel sowohl das Maß als auch die Maßeinheit als Merkmalwert eintragen. Beispiel: "5 cm"
+
+| Schaftweite
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Schaftweite*
+
+*_Hinweis:_* Am Artikel sowohl das Maß als auch die Maßeinheit als Merkmalwert eintragen. Beispiel: "5 cm"
+
+| Weite
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Weite*
+
+*_Hinweis:_* Am Artikel sowohl das Maß als auch die Maßeinheit als Merkmalwert eintragen. Beispiel: "5 cm"
+
+| Muster
+| * Attribut mit der Attributverknüpfung *Muster* für Google Shopping
+
+_oder_
+
+* Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Muster*
+
+*_Hinweis:_* Attribute werden bevorzugt.
+
+| Herstellerfarbe +
+(Pflichtangabe)
+| * Attribut mit der Attributverknüpfung *Farbe* für Google Shopping
+
+_oder_
+
+* Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Herstellerfarbe*
+
+*_Hinweis:_* Attribute werden bevorzugt.
+
+| Innensohlenmaterial
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Innensohlenmaterial*
+
+| Anlass
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Anlass*
+
+| Saison
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Saison*
+
+| Sonstige
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Sonstige*
+
+| Applikationen
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Applikationen*
+
+| Modestil
+| * Merkmal des Typs *Text* oder *Auswahl* mit der *Check24 Fashion-Merkmal*-Verknüpfung *Modestil*
 |===
 
 [#url-check24-elastischer-export]
